--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,46 @@
-html{
+/*
+https://colorhunt.co/palette/6c0345dc6b19f7c566fff8dc
+*/
+
+:root {
+    --bg: #FFF8DC;
+    --card: #F7C566;
+    --text: #6C0345; 
+}
+body {
+    margin: 0; padding: 0;
     font-family: "Roboto Slab", serif;
+    background-color: var(--bg);
+}
+
+.container{
+    display:grid; margin:1rem;grid-gap: 1rem;
+}
+
+.card{
+    border: #ddd;
+    border-radius: 8px;
+    
+}
+
+.card:hover{
+    box-shadow: 0,5px,10px rgba(0, 0, 0, 0.5);
+}
+
+.card__header{
+    font-size: 1.2rem; font-weight: bold;;
+    background-color: #f5f5f5;
+    padding: 0.5rem;
+    text-align: center;
+}
+.card__body{
+    padding: 1rem;
+}
+.card__body__image{
+    text-align: center;
+
+}
+
+.card_body_text{
+    margin: 0.5rem;
 }
